--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: 'ja-kawaii', 'Yu Gothic', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
+            font-family: 'はなぞめフォント', 'Yu Gothic', 'Hiragino Kaku Gothic ProN', Meiryo, sans-serif;
         }
 
         /* 全局背景：亮黄→亮蓝渐变 */
