--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
                 <h3>新しいコアコンテンツ</h3>
                 <ul>
                     <li><a href="utau.html">UTAU 音源</a><br>（津時フタゴシリーズ音源）</li>
-                    <li><a href="https://www.weights.com/zh/models/cm6019tfu0fy4li180fklx3bv">Weights RVCモデル</a><br>（音声変換AIツール）</li>
+                    <li><a href="other.html">Weights RVCモデル</a><br>（音声変換AIツール）</li>
                     <li><a href="character.html">キャラクター設定</a><br>（津時テオ/ネア/テッヴォ And More）</li>
-                    <li><a href="https://b23.tv/MQ0ChlV">公式アカウント</a><br>（最新情報配信）</li>
+                    <li><a href="other.html">公式アカウント</a><br>（最新情報配信）</li>
                 </ul>
             </div>
 
             <div class="content-card">
                 <h3>もっと</h3>
                 <ul>
-                    <li><a href="https://x.com/Tsutokiteo?t=gqfUbnGmQYL0pz4wpqNfPQ&s=09">Official X/旧Twitter</a></li>
-                    <li><a href="https://x.com/Tsutokiteo_QwQ?t=OhRx51d8QTYWbgNRa_7eBg&s=09">Personal X/旧Twitter</a></li>
-                    <li><a href="https://www.pixiv.net/users/109038645">Pixiv</a></li>
-                    <li><a href="https://tsukuiuka.booth.pm">BOOTH ストア</a></li>
+                    <li><a href="other.html">Official X/旧Twitter</a></li>
+                    <li><a href="other.html">Personal X/旧Twitter</a></li>
+                    <li><a href="other.html">Pixiv</a></li>
+                    <li><a href="other.html">BOOTH ストア</a></li>
                 </ul>
             </div>
         </div>
