--- a/utau.html
+++ b/utau.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>津時風月プロジェクト - テスト中</title>
+    <title>津時風月プロジェクト - UTAU音源</title>
     <style>
         body {
             display: flex;
