--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 <ul>
                     <li><a href="utau.html">UTAU 音源</a><br>（津時フタゴシリーズ音源）</li>
                     <li><a href="https://www.weights.com/zh/models/cm6019tfu0fy4li180fklx3bv">Weights RVCモデル</a><br>（音声変換AIツール）</li>
+                    <li><a href="use.html">キャラクター利用規約</a><br>（Character Terms of Use）</li>
                     <li><a href="character.html">キャラクター設定</a><br>（津時テオ/ネア/テッヴォ And More）</li>
                     <li><a href="https://b23.tv/MQ0ChlV">公式アカウント</a><br>（最新情報配信）</li>
                 </ul>
