--- a/utau.html
+++ b/utau.html
@@ -3,34 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>津時風月プロジェクト - UTAU音源</title>
+    <title>津時風月プロジェクト - UTAU</title>
     <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+        * { margin:0; padding:0; text-align:left; }
+        body { font-family: Arial, sans-serif; }
+        .title { 
+            font-size: 32px; 
+            margin: 20px 0; 
+            color: #2c3e50;
         }
-        .container {
-            text-align: center;
-            padding: 2rem;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        .subtitle {
+            font-size: 24px;
+            margin: 15px 0;
+            color: #34495e;
         }
-        h1 {
-            color: #333;
-            font-size: 2rem;
+        .download {
+            font-size: 14px;
+            color: #3498db;
+            display: block;
+            margin-top: 25px;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>网站测试中</h1>
-        <p>（テスト中です）</p>
-    </div>
+    <div class="title">UTAU音源</div>
+    <div class="subtitle">示例音源</div>
+    <a href="sample.zip" class="download">点击下载</a>
 </body>
 </html>
