--- a/utau.html
+++ b/utau.html
@@ -29,6 +29,6 @@
     <div class="title">UTAU音源</div>
     <div class="subtitle">津時テオ</div>
     <div class="subtitle">  </div>
-    <a href="TsutokiTeo_JA.zip" class="download">点击下载</a>
+    <a href="https://github.com/tsutokiteo/tsutokiteo.github.io/releases/download/TsutokiTeo_JA_VCV/TsutokiTeo_JA.zip" class="download">点击下载</a>
 </body>
 </html>
