--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-    <img src="icon.png" alt="プロジェクトアイコン" class="header-icon">
+    <img src="1765549950361.png" alt="プロジェクトアイコン" class="header-icon">
 
     <div class="container">
         <div class="content-grid">
