--- a/character.html
+++ b/character.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="error.png" alt="页面建设中" class="construction-image">
+        <img src="1765553621991.png" alt="页面建设中" class="construction-image">
         <p class="message">该页面还在制作或修改中，可能一会就可以访问啦</p>
     </div>
 </body>
