Add favicon and icon links to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <!-- 标签页图标（正方形） -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- 若用png格式，补充： -->
+    <link rel="icon" href="icon.png" type="image/png" sizes="32x32">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>津時風月プロジェクト</title>
@@ -21,6 +26,26 @@
             border-top: 1px solid rgba(0, 0, 0, 0.2);
             font-size: 14px;
             color: #333333;
+        }
+        
+/* 左上角悬浮图标样式 */
+        .left-float-icon {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 100; /* 确保在最上层 */
+            width: 40px; /* 正方形尺寸，可调整 */
+            height: 40px;
+            transition: transform 0.3s ease;
+        }
+        .left-float-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* 保持正方形不拉伸 */
+            border-radius: 4px; /* 可选：加轻微圆角 */
+        }
+        .left-float-icon:hover {
+            transform: scale(1.1); /*  hover放大效果 */
         }
 
 
@@ -189,6 +214,12 @@
     </style>
 </head>
 <body>
+    
+    <!-- 标签页图标（优先PNG正方形，兼容所有现代浏览器） -->
+    <link rel="icon" href="icon.png" type="image/png" sizes="32x32">
+    <!-- 可选：保留ico作为老浏览器兜底（不想要可直接删） -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 
     <!-- 语言切换器（和第一个页面统一） -->
     <div class="language-switcher">
