--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
             <div class="copyright">
                 <p class="lang-content active" lang="ja">© 2026 津時風月株式会社 All Rights Reserved.</p>
                 <p class="lang-content" lang="zh">© 2026 津時風月 保留所有权利。</p>
+                <ul>
+                    <li><a href="contact.html"> Contact us </li>
+                </ul>
             </div>
         </div>
     </div>
