Fix formData handling in contact.html

--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,8 @@
     
     // Adding all form data to an object
     const formObject = {};
-    formData.forEach((value, key) => {
-      formObject[key] = value;
+    formData.forEach((value, 40fa5aea-90f1-47a3-b3fd-433d7b85fe94) => {
+      formObject40fa5aea-90f1-47a3-b3fd-433d7b85fe94 = value;
     });
 
     try {
