Update download links to reflect correct sources

--- a/Other_UTAU_VB/靛铧アオイ.html
+++ b/Other_UTAU_VB/靛铧アオイ.html
@@ -282,7 +282,7 @@
                     <h3 class="download-subtitle">日本語</h3>
                     <a href="https://bowlroll.net/file/335462" class="download-link" target="_blank">CV（通过Bowlroll）</a>
                     <a href="https://github.com/tsutokiteo/tsutokiteo.github.io/releases/download/TenshinAoiCV/HOUKOSHIBA.V4.1.0.zip" class="download-link" target="_blank">CV（通过GitHub）</a>
-                    <a href="https://booth.pm/ja/items/6191234" class="download-link" target="_blank">CV（通过GitHub）</a>
+                    <a href="https://booth.pm/ja/items/6191234" class="download-link" target="_blank">CV（通过Booth）</a>
                 </div>
             </div>
         </div>
@@ -364,7 +364,7 @@
                 <h3 class="download-subtitle">日语</h3>
                     <a href="https://bowlroll.net/file/335462" class="download-link" target="_blank">CV（通过Bowlroll）</a>
                     <a href="https://github.com/tsutokiteo/tsutokiteo.github.io/releases/download/TenshinAoiCV/HOUKOSHIBA.V4.1.0.zip" class="download-link" target="_blank">CV（通过GitHub）</a>
-                    <a href="https://booth.pm/ja/items/6191234" class="download-link" target="_blank">CV（通过GitHub）</a>
+                    <a href="https://booth.pm/ja/items/6191234" class="download-link" target="_blank">CV（通过Booth）</a>
                 </div>
             </div>
         </div>
