Update links to other UTAU resources

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <div class="content-card lang-content active" lang="ja">
                 <ul>
                     <li><a href="utau.html">UTAU 音源</a><br>（津時フタゴシリーズ音源）</li>
-                    <li><a href="otherutau.html">その他 UTAU 音源</a><br>Other Utau VB</li>
+                    <li><a href="Other_UTAU_VB/otherutau.html">その他 UTAU 音源</a><br>Other Utau VB</li>
                     <li><a href="https://www.weights.com/zh/models/cm6019tfu0fy4li180fklx3bv">Weights RVCモデル</a><br>（音声変換AIツール）</li>
                     <li><a href="use.html">キャラクター利用規約</a><br>（Character Terms of Use）</li>
                     <li><a href="character.html">キャラクター設定</a><br>（津時テオ/ネア/テッヴォ And More）</li>
@@ -251,7 +251,7 @@
             <div class="content-card lang-content" lang="zh">
                 <ul>
                     <li><a href="utau.html">UTAU 音源</a><br>（TsukiFutago系列音源）</li>
-                    <li><a href="otherutau.html">其他 UTAU 音源</a><br>Other Utau VB</li>
+                    <li><a href="Other_UTAU_VB/otherutau.html">其他 UTAU 音源</a><br>Other Utau VB</li>
                     <li><a href="https://www.weights.com/zh/models/cm6019tfu0fy4li180fklx3bv">Weights RVC模型</a><br>（语音转换AI工具）</li>
                     <li><a href="use.html">角色使用条款</a><br>（Character Terms of Use）</li>
                     <li><a href="character.html">角色设定</a><br>（津時テオ/ネア/テッヴォ 等）</li>
