Update links to靛铧アオイ.html for consistency

--- a/Other_UTAU_VB/otherutau.html
+++ b/Other_UTAU_VB/otherutau.html
@@ -141,7 +141,7 @@
         
         <ul class="voicebank-list">
             <li class="voicebank-item">
-                <a href="Other_UTAU_VB/靛铧アオイ.html" class="voicebank-link">靛铧アオイ</a>
+                <a href="靛铧アオイ.html" class="voicebank-link">靛铧アオイ</a>
             </li>
         </ul>
     </div>
@@ -152,7 +152,7 @@
         
         <ul class="voicebank-list">
             <li class="voicebank-item">
-                <a href="Other_UTAU_VB/靛铧アオイ.html" class="voicebank-link">靛铧アオイ</a>
+                <a href="靛铧アオイ.html" class="voicebank-link">靛铧アオイ</a>
             </li>
         </ul>
     </div>
